--- a/package.xml
+++ b/package.xml
@@ -17,7 +17,8 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>roscpp</build_depend>
-  
+  <build_depend>message_generation</build_depend>
+
   <build_export_depend>actionlib_msgs</build_export_depend>
   <build_export_depend>actionlib</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
@@ -31,7 +32,7 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>roscpp</exec_depend>
-
+  <exec_depend>message_runtime</exec_depend>
 
   <export>
 
