Implemented Map Service Node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(projeto_semear)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -23,11 +23,17 @@ add_message_files(
   Pose.msg
 )
 
+# Generate services in the 'srv' folder
+add_service_files(
+  FILES
+  GetPose.srv
+)
+
 add_action_files(
   FILES 
   moveEletroima.action
 )
-
+    
 generate_messages(
   DEPENDENCIES
   actionlib_msgs geometry_msgs std_msgs
@@ -39,7 +45,6 @@ catkin_package(
   CATKIN_DEPENDS actionlib_msgs message_runtime #geometry_msgs std_msgs
 #  DEPENDS system_lib
 )
-
 
 include_directories(
   include
@@ -53,18 +58,34 @@ add_library(motor_library src/kine_control.cpp
 target_link_libraries(motor_library ${catkin_LIBRARIES})
 
 
+
 add_executable(eletroima_control_server src/eletroima_control_server.cpp)
 target_link_libraries(eletroima_control_server
   ${catkin_LIBRARIES}
 )
+add_dependencies(eletroima_control_server ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
 add_executable(eletroima_control_demo src/eletroima_control_demo.cpp)
 target_link_libraries(eletroima_control_demo
   ${catkin_LIBRARIES}
 )
+add_dependencies(eletroima_control_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
 add_executable(kine_control_demo src/kine_control_demo.cpp)
 target_link_libraries(kine_control_demo
   ${catkin_LIBRARIES}
   motor_library
 )
+
+add_executable(positioning_system src/positioning_system.cpp)
+target_link_libraries(positioning_system
+  ${catkin_LIBRARIES}
+)
+add_dependencies(positioning_system ${${PROJECT_NAME}_EXPORTED_TARGETS})
+
+
+add_executable(positioning_system_demo src/positioning_system_demo.cpp)
+target_link_libraries(positioning_system_demo
+  ${catkin_LIBRARIES}
+)
+add_dependencies(positioning_system_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
