--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,6 @@ add_library(motor_library src/kine_control.cpp
 target_link_libraries(motor_library ${catkin_LIBRARIES})
 
 
-
 add_executable(eletroima_control_server src/eletroima_control_server.cpp)
 target_link_libraries(eletroima_control_server
   ${catkin_LIBRARIES}
@@ -103,6 +102,7 @@ add_dependencies(gps_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
 add_executable(navigating_server src/navigating_server.cpp)
 target_link_libraries(navigating_server
   ${catkin_LIBRARIES}
+  motor_library
 )
 add_dependencies(navigating_server ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
@@ -131,4 +131,18 @@ target_link_libraries(transicao_demo
   motor_library
 )
 add_dependencies(transicao_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
+
+add_executable(linha_preta src/linha_preta.cpp)
+target_link_libraries(linha_preta
+  ${catkin_LIBRARIES}
+  motor_library
+)
+add_dependencies(linha_preta ${${PROJECT_NAME}_EXPORTED_TARGETS})
+
+add_executable(navigating_server_demo src/navigating_server_demo.cpp)
+target_link_libraries(navigating_server_demo
+  ${catkin_LIBRARIES}
+  motor_library
+)
+add_dependencies(navigating_server_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
