--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,3 +145,9 @@ target_link_libraries(navigating_server_demo
 )
 add_dependencies(navigating_server_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
+add_executable(pegar_container src/pegar_container.cpp)
+target_link_libraries(pegar_container
+  ${catkin_LIBRARIES}
+  motor_library
+)
+add_dependencies(pegar_container ${${PROJECT_NAME}_EXPORTED_TARGETS})
