criado serviço para manter controle dos containers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,9 @@ add_service_files(
   FILES
   GetPose.srv
   PathPlanning.srv
+  SetContainer.srv
+  GetContainerInfo.srv
+  MoveContainer.srv
   #AlignRobot.srv
 )
 
@@ -144,4 +147,11 @@ target_link_libraries(navigating_server_demo
   motor_library
 )
 add_dependencies(navigating_server_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
+
+add_executable(mapa_container_server src/mapa_container_server.cpp)
+target_link_libraries(mapa_container_server
+  ${catkin_LIBRARIES}
+  motor_library
+)
+add_dependencies(mapa_container_server ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
