--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ add_service_files(
 add_action_files(
   FILES 
   goToFirstPose.action
+  goToContainer.action
   moveEletroima.action
   setEletroima.action
   navigation.action
