--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,16 +37,6 @@ add_message_files(
 # Generate services in the 'srv' folder
 add_service_files(
   FILES
-  EscolherContainer.srv
-  Strategy.srv
-  GetPose.srv
-  PathPlanning.srv
-	DepositarContainer.srv
-  SetContainer.srv
-  GetContainerInfo.srv
-  MoveContainer.srv
-  DescobrirCor.srv
-  #AlignRobot.srv
 )
 
 add_action_files(
@@ -55,13 +45,10 @@ add_action_files(
   goToContainer.action
   goFromContainerToIntersection.action
   goFromDockToIntersection.action
-  goToBlueDock.action
   goToDock.action
-  goToGreenDock.action
   changeIntersection.action
   moveEletroima.action
   setEletroima.action
-  navigation.action
 )
     
 generate_messages(
@@ -86,78 +73,6 @@ include_directories(
 catkin_install_python(PROGRAMS scripts/main.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
-# Declare a C++ library
-add_library(motor_library src/kine_control.cpp
-)
-# add_library(rotary_encoder rasp/rotary_encoder.cpp
-# )
-
-# Link Library with respective dependencies
-target_link_libraries(motor_library ${catkin_LIBRARIES})
-add_dependencies(motor_library ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(eletroima_control_server src/eletroima_control_server.cpp)
-target_link_libraries(eletroima_control_server
-  ${catkin_LIBRARIES}
-)
-add_dependencies(eletroima_control_server ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(eletroima_control_demo src/tests/eletroima_control_demo.cpp)
-target_link_libraries(eletroima_control_demo
-  ${catkin_LIBRARIES}
-)
-add_dependencies(eletroima_control_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(kine_control_demo src/tests/kine_control_demo.cpp)
-target_link_libraries(kine_control_demo
-  ${catkin_LIBRARIES}
-  motor_library
-)
-
-add_executable(escolher_container src/escolher_container.cpp)
-target_link_libraries(escolher_container
-  ${catkin_LIBRARIES}
-)
-add_dependencies(escolher_container ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(estrategia_server src/estrategia_server.cpp)
-target_link_libraries(estrategia_server
-  ${catkin_LIBRARIES}
-)
-add_dependencies(estrategia_server ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(gps src/gps.cpp)
-target_link_libraries(gps
-  ${catkin_LIBRARIES}
-)
-add_dependencies(gps ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-
-add_executable(gps_demo src/tests/gps_demo.cpp)
-target_link_libraries(gps_demo
-  ${catkin_LIBRARIES}
-)
-add_dependencies(gps_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(navigating_server src/navigating_server.cpp)
-target_link_libraries(navigating_server
-  ${catkin_LIBRARIES}
-  motor_library
-)
-add_dependencies(navigating_server ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(path_planning_demo src/tests/path_planning_demo.cpp)
-target_link_libraries(path_planning_demo
-  ${catkin_LIBRARIES}
-)
-add_dependencies(path_planning_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(path_planning_server src/path_planning_server.cpp)
-target_link_libraries(path_planning_server
-  ${catkin_LIBRARIES}
-)
-add_dependencies(path_planning_server ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
 add_executable(convert_colorsensor src/convert_colorsensor.cpp)
 target_link_libraries(convert_colorsensor
   ${catkin_LIBRARIES}
@@ -165,72 +80,11 @@ target_link_libraries(convert_colorsensor
 )
 add_dependencies(convert_colorsensor ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
-
-add_executable(navigating_server_demo src/tests/navigating_server_demo.cpp)
-target_link_libraries(navigating_server_demo
+add_executable(eletroimaInterface simulation_interface_code/eletroimaInterface.cpp)
+target_link_libraries(eletroimaInterface
   ${catkin_LIBRARIES}
-  motor_library
 )
-add_dependencies(navigating_server_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-
-add_executable(depositar_server src/depositar_server.cpp)
-target_link_libraries(depositar_server
-  ${catkin_LIBRARIES}
-  motor_library
-)
-add_dependencies(depositar_server ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(depositar_client src/tests/depositar_client.cpp)
-target_link_libraries(depositar_client
-  ${catkin_LIBRARIES}
-  motor_library
-)
-
-add_dependencies(depositar_client ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(mapa_container_server src/mapa_container_server.cpp)
-target_link_libraries(mapa_container_server
-  ${catkin_LIBRARIES}
-  motor_library
-)
-add_dependencies(mapa_container_server ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(mapa_container_demo src/tests/mapa_container_demo.cpp)
-target_link_libraries(mapa_container_demo
-  ${catkin_LIBRARIES}
-  motor_library
-)
-add_dependencies(mapa_container_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(descobrir_cor_server src/descobrir_cor_server.cpp)
-target_link_libraries(descobrir_cor_server
-  ${catkin_LIBRARIES}
-  motor_library
-)
-add_dependencies(descobrir_cor_server ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(descobrir_cor_demo src/tests/descobrir_cor_demo.cpp)
-target_link_libraries(descobrir_cor_demo
-  ${catkin_LIBRARIES}
-  motor_library
-)
-add_dependencies(descobrir_cor_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-add_executable(main src/main.cpp)
-target_link_libraries(main
-  ${catkin_LIBRARIES}
-  motor_library
-)
-add_dependencies(main ${${PROJECT_NAME}_EXPORTED_TARGETS})
-
-
-add_executable(pid_demo src/tests/pid_demo.cpp)
-target_link_libraries(pid_demo
-  ${catkin_LIBRARIES}
-  motor_library
-)
-add_dependencies(pid_demo ${${PROJECT_NAME}_EXPORTED_TARGETS})
+add_dependencies(eletroimaInterface ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
 add_executable(arduinoMotorConversion simulation_interface_code/arduinoMotorConversion.cpp)
 target_link_libraries(arduinoMotorConversion
@@ -251,7 +105,7 @@ add_dependencies(raspEncoderConversion ${${PROJECT_NAME}_EXPORTED_TARGETS})
 #)
 #add_dependencies(publishEncoder ${${PROJECT_NAME}_EXPORTED_TARGETS})
 
-add_executable(motorCode rasp/motorCode.cpp)
-target_link_libraries(motorCode
- ${catkin_LIBRARIES}
-)
+#add_executable(motorCode rasp/motorCode.cpp)
+#target_link_libraries(motorCode
+# ${catkin_LIBRARIES}
+#)
